# FileTimeFixer

./: .gitignore  .npmrc  .pnpmfile.cjs  .release-it.json  LICENSE  README.md  index.html  init.sh  init_tauri_android.ps1  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  uno.config.js  vite.config.js  vite.config.js.timestamp-1762699402910-8f1c0efe3b26e.mjs
.github/workflows/: main.yml
src/: App.vue  main.js  quasar-variables.sass
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/android/app/: build.gradle.kts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  placeholder.txt
src-tauri/src/: image_fixer.rs  lib.rs  main.rs
src/styles/: global.scss
