[package]
name = "file-time-fixer"
version = "0.0.0"
description = "A Tauri application for fixing file timestamps"
authors = ["You"]
license = ""
repository = ""
default-run = "file-time-fixer"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.9", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9", features = [] }
tauri-plugin-dialog = "2.9"
tauri-plugin-fs = "2.9"
chrono = { version = "0.4", features = ["serde"] }
kamadak-exif = "0.6.1"
jni-sys = "0.3.0"
tokio = { version = "1", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[features]
custom-protocol = ["tauri/custom-protocol"]
