[package]
name = "file-time-fixer"
description = "A Tauri application for fixing file timestamps"
version = "0.0.64"
authors = ["You"]
license = "C Emeric"
repository = ""
default-run = "file-time-fixer"
edition = "2021"
rust-version = "1.60"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"  # 使用单独的lib.rs文件
name = "file_time_fixer_lib"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "^2.0.0", features = [] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.2"
chrono = { version = "0.4", features = ["serde"] }
kamadak-exif = "0.6.1"
jni-sys = "0.3.0"
tokio = { version = "1", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[features]
custom-protocol = ["tauri/custom-protocol"]
